# renode_gtest

./: .clangd  .gitmodules  CMakeLists.txt  CMakePresets.json  stm32f4.repl  test.resc
tests/: CMakeLists.txt  sample_test.cpp  test-button.roboto
tests/renode/: renode.cpp  renode.h  test.h  uart.cpp  uart.h
